--- a/Programming Final Work/option.css
+++ b/Programming Final Work/option.css
@@ -13,6 +13,11 @@
 .canvas{
   display:flex;
   justify-content:center;
-  margin:25px;
+  margin-top:25px;
+  margin-bottom:25px;
 
+}
+
+html{
+  background-color:gray;
 }
